@@ -12,6 +12,7 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 import static com.aseemsavio.covid19informationsystem.utils.C19ISConstants.*;
@@ -27,7 +28,7 @@ public class RespondOnException extends ResponseEntityExceptionHandler {
         response.setTotalResults(0);
         Error error = new Error(ERROR_CODE_NOT_FOUND, ERROR_MSG_NOT_FOUND);
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
-        response.setErrors(Arrays.asList(error));
+        response.setErrors(List.of(error));
         return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
     }
 
