@@ -13,11 +13,10 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
@@ -25,34 +24,34 @@ import java.util.concurrent.TimeUnit;
 import static com.aseemsavio.covid19informationsystem.utils.C19ISConstants.*;
 
 @RestController
-@RequestMapping("/api/v1")
+@RequestMapping(API_V1)
 public class VersionOneController {
 
     @Autowired
     CoronaDataService coronaDataService;
 
     @Async
-    @GetMapping("/timeSeries")
+    @GetMapping(TIMESERIES)
     public CompletableFuture<ResponseEntity<Response>> findAllTimeSeries() throws DataNotFoundException {
-        List<CoronaData> data = null;
-        Response response = new Response();
+        List<CoronaData> data;
+        var response = new Response();
         data = coronaDataService.findAllData();
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setDates(localCache.getDates());
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
         response.setTimeSeriesData(data);
-        return CompletableFuture.completedFuture(new ResponseEntity< >(response, HttpStatus.OK));
+        return CompletableFuture.completedFuture(new ResponseEntity<>(response, HttpStatus.OK));
     }
 
     @Async
-    @GetMapping("/count")
+    @GetMapping(COUNT)
     public CompletableFuture<ResponseEntity<Response>> findAllCount() throws DataNotFoundException {
-        List<CoronaDataExtra> data = null;
-        Response response = new Response();
+        List<CoronaDataExtra> data;
+        var response = new Response();
         data = coronaDataService.findAllCount();
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
@@ -61,12 +60,12 @@ public class VersionOneController {
     }
 
     @Async
-    @GetMapping("/provinces")
+    @GetMapping(PROVINCES)
     public CompletableFuture<ResponseEntity<Response>> getAllProvinces() throws DataNotFoundException {
-        List<String> data = null;
-        Response response = new Response();
+        List<String> data;
+        var response = new Response();
         data = coronaDataService.findAllProvinces();
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
@@ -75,25 +74,25 @@ public class VersionOneController {
     }
 
     @Async
-    @GetMapping("/countries")
+    @GetMapping(COUNTRIES)
     public CompletableFuture<ResponseEntity<Response>> getAllCountries() throws DataNotFoundException {
-        List<String> data = null;
-        Response response = new Response();
+        List<String> data;
+        var response = new Response();
         data = coronaDataService.findAllCountries();
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
         response.setCountries(data);
         return CompletableFuture.completedFuture(new ResponseEntity<>(response, HttpStatus.OK));
     }
 
     @Async
-    @GetMapping("/timeSeries/findByProvince")
-    public CompletableFuture<ResponseEntity<Response>> getTimeSeriesByProvince(@RequestParam String province) throws DataNotFoundException, CovidInvalidDataException {
+    @GetMapping(value = TIME_SERIES_PROVINCE)
+    public CompletableFuture<ResponseEntity<Response>> getTimeSeriesByProvince(@PathVariable(PROVINCE_PV) String province) throws DataNotFoundException, CovidInvalidDataException {
         List<CoronaData> data = coronaDataService.findByProvinces(province);
-        Response response = new Response();
-        LocalCache localCache = LocalCache.getInstance();
+        var response = new Response();
+        var localCache = LocalCache.getInstance();
         response.setDates(localCache.getDates());
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
@@ -103,55 +102,55 @@ public class VersionOneController {
     }
 
     @Async
-    @GetMapping("/timeSeries/findByCountry")
-    public CompletableFuture<ResponseEntity<Response>> getTimeSeriesByCountry(@RequestParam String country) throws DataNotFoundException, CovidInvalidDataException {
-        List<CoronaData> data = null;
-        Response response = new Response();
+    @GetMapping(value = TIME_SERIES_COUNTRY)
+    public CompletableFuture<ResponseEntity<Response>> getTimeSeriesByCountry(@PathVariable(COUNTRY_PV) String country) throws DataNotFoundException, CovidInvalidDataException {
+        List<CoronaData> data;
+        var response = new Response();
         data = coronaDataService.findByCountry(country);
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setDates(localCache.getDates());
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
         response.setTimeSeriesData(data);
-        return CompletableFuture.completedFuture(new ResponseEntity< >(response, HttpStatus.OK));
+        return CompletableFuture.completedFuture(new ResponseEntity<>(response, HttpStatus.OK));
     }
 
     @Async
-    @GetMapping("/count/findByProvince")
-    public CompletableFuture<ResponseEntity<Response>> getCountByProvince(@RequestParam String province) throws DataNotFoundException, CovidInvalidDataException {
-        List<CoronaDataExtra> data = null;
+    @GetMapping(value = COUNT_PROVINCE)
+    public CompletableFuture<ResponseEntity<Response>> getCountByProvince(@PathVariable(PROVINCE_PV) String province) throws DataNotFoundException, CovidInvalidDataException {
+        List<CoronaDataExtra> data;
         data = coronaDataService.findByProvinceCount(province);
-        Response response = new Response();
+        var response = new Response();
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
         response.setCountData(data);
         return CompletableFuture.completedFuture(new ResponseEntity<>(response, HttpStatus.OK));
     }
 
     @Async
-    @GetMapping("/count/findByCountry")
-    public CompletableFuture<ResponseEntity<Response>> getCountByCountry(@RequestParam String country) throws CovidInvalidDataException, DataNotFoundException {
-        List<CoronaDataExtra> data = null;
-        Response response = new Response();
+    @GetMapping(value = COUNT_COUNTRY)
+    public CompletableFuture<ResponseEntity<Response>> getCountByCountry(@PathVariable(COUNTRY_PV) String country) throws CovidInvalidDataException, DataNotFoundException {
+        List<CoronaDataExtra> data;
+        var response = new Response();
         data = coronaDataService.findByCountryCount(country);
         response.setStatus(STATUS_OK);
         response.setTotalResults(data.size());
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
         response.setCountData(data);
         return CompletableFuture.completedFuture(new ResponseEntity<>(response, HttpStatus.OK));
     }
 
     private ResponseEntity<Response> getNotFoundErrorResponse(Response response) {
-        LocalCache localCache = LocalCache.getInstance();
+        var localCache = LocalCache.getInstance();
         response.setStatus(STATUS_FAILED);
         response.setTotalResults(0);
-        Error error = new Error(ERROR_CODE_NOT_FOUND, ERROR_MSG_NOT_FOUND);
+        var error = new Error(ERROR_CODE_NOT_FOUND, ERROR_MSG_NOT_FOUND);
         response.setLastUpdatedMinutes(TimeUnit.MILLISECONDS.toMinutes(System.currentTimeMillis() - localCache.getLastUpdatedMilliSeconds()));
-        response.setErrors(Arrays.asList(error));
+        response.setErrors(List.of(error));
         return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
     }
 }
